# pixcii

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh
src/: ascii_art.cpp  ascii_art.h  edge_detection.cpp  edge_detection.h  image.cpp  image.h  main.cpp  output.cpp  output.h  stb_image_wrapper.h
